# fold

./: .gitignore  Cargo.toml  README.md  wrangler.jsonc
.github/workflows/: deploy.yml
crates/policy/: Cargo.toml
crates/policy/src/: ast.rs  diag.rs  docs.rs  eval.rs  lex.rs  lib.rs  parse.rs  prelude.rs  typeck.rs  types.rs
crates/policy/tests/: docs_up_to_date.rs  examples_compile.rs
docs/: language.md  policy-examples-stress.md  policy-examples.md
migrations/: 0001_init.sql  0002_activity_codes_arrival.sql  0003_templates_runs.sql  0004_allow_guests.sql  0004_private_by_link.sql  0005_activity_seconds.sql  0006_policy_rules.sql  0007_server_policies_push.sql  0008_policy_causal_depth.sql  0009_exclusive_commit.sql  0010_commit_capacity.sql
scripts/: build-policy-web.sh  build-worker.sh  final-check.sh
src/: api.rs  db.rs  lib.rs  logic.rs  models.rs  policy_env.rs  policy_planner.rs  policy_runtime.rs  policy_store.rs  policy_timeline.rs  push.rs  push_crypto.rs  util.rs
web/: index.html  package-lock.json  package.json
web/public/: manifest.webmanifest  sw.js
web/public/policy-wasm/: policy.d.ts  policy.js  policy_bg.wasm
web/src/: App.css  App.tsx  activityPresence.test.ts  activityPresence.ts  activityShare.test.ts  activityShare.ts  api.test.ts  api.ts  emoji.ts  emojiCatalog.ts  emojiColor.ts  emojiSearch.ts  favicon.test.ts  favicon.ts  foldTextMask.ts  format.ts  grouping.ts  hash.ts  iconStyle.tsx  links.ts  main.tsx  nodeVisual.test.ts  nodeVisual.ts  noise.ts  notify-client.test.ts  notify-client.ts  pictogramCatalog.ts  push-client.test.ts  push-client.ts  sandbox.ts  storage.ts  theme.ts  tileAccent.ts  tileLayout.ts  tugOfWar.ts  types.ts  useForceTheme.ts  usePolling.ts  useRoom.ts  useSync.ts
web/src/components/: ActivityBadge.tsx  ActivityCard.tsx  ActivityGraph.tsx  ActivityInfo.tsx  ActivityListItem.tsx  ActivityStats.tsx  ActivityTile.tsx  BiologyRoom.tsx  CreateRunForm.tsx  CreateTile.tsx  EmojiGlyph.tsx  EmojiPicker.tsx  FoldTitleFX.tsx  GroupMeter.tsx  GroupPreview.tsx  HomeShell.tsx  MarkdownBlock.tsx  NotificationFeed.tsx  Onboarding.tsx  PictogramIcon.tsx  PolicyDemoPanel.tsx  PolicyHelp.tsx  PolicyPanel.tsx  PresenceBadge.tsx  ProposeForm.tsx  PushPanel.tsx  RangeSlider.tsx  RoomCanvas.tsx  RoomPanel.tsx  SortSelect.tsx  TagBar.tsx  ViewToggle.tsx
web/src/pages/: ActivityRoom.tsx  BiologyPage.tsx  ChemistryPage.tsx  EmojiLabPage.tsx  HomePage.tsx  HomeTour.tsx  MathPage.tsx  PhysicsPage.tsx  RoomTutorial.tsx
web/src/policy/: commit.test.ts  commit.ts  effects.test.ts  effects.ts  engine.ts  highlight.ts  homeEnv.ts  notifier.test.ts  notifier.ts  rules.ts  share.test.ts  share.ts  values.ts
web/src/tutorial/: Coachmark.tsx  PartyBurst.tsx  Spotlight.tsx  fakeCrowd.ts  fakeRoom.ts  useScript.ts
