[package]
name = "fold"
version = "0.1.0"
edition = "2021"
authors = ["fold"]

[lib]
# cdylib for the wasm Worker; rlib so `cargo test` can build a native test
# harness for the pure `logic` module.
crate-type = ["cdylib", "rlib"]

[dependencies]
worker = { version = "0.8", features = ["d1", "queue", "timezone"] }
worker-macros = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
getrandom = { version = "0.2", features = ["js"] }
policy = { path = "crates/policy" }
# Web Push VAPID signing and RFC 8291 payload encryption.
base64 = "0.22"
p256 = { version = "0.13", features = ["ecdsa", "ecdh"] }
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
url = "2"
chrono = { version = "0.4", default-features = false, features = ["wasmbind"] }
chrono-tz = { version = "0.10", default-features = false }
# Pin below 0.2.126 (parser/EH regression with current toolchain).
wasm-bindgen = "=0.2.125"

[profile.release]
# Free plan caps the Worker at 3 MB. Optimize hard for size.
opt-level = "z"
lto = true
codegen-units = 1
strip = true

# Optimized build under a non-"release" name so worker-build does NOT inject
# `--force-enable-abort-handler` (which the current wasm-bindgen turns into
# externref catch wrappers that fail to build). Build with:
#   worker-build --profile small
[profile.small]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
strip = true

[workspace]
members = ["crates/policy"]
resolver = "2"
