[package]
name = "policy"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[features]
default = []
wasm = ["dep:wasm-bindgen", "dep:serde_json"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", optional = true }
wasm-bindgen = { version = "=0.2.125", optional = true }

[dev-dependencies]
serde_json = "1"
